--- a/app/globals.css
+++ b/app/globals.css
@@ -6,8 +6,9 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
+  --font-sans: var(--font-poppins);
   --font-mono: var(--font-geist-mono);
+  --font-oxanium: var(--font-oxanium);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -41,6 +42,41 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+
+  --ease-minor-spring: cubic-bezier(0.18, 0.89, 0.82, 1.04);
+
+  @keyframes reveal-up {
+    0% {
+      opacity: 0;
+      transform: translateY(80%);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  @keyframes reveal-down {
+    0% {
+      opacity: 0;
+      transform: translateY(-80%);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  @keyframes content-blur {
+    0% {
+      filter: blur(0.3rem);
+    }
+    100% {
+      filter: blur(0);
+    }
+  }
+
+  --animate-reveal-up: reveal-up 0.5s var(--ease-minor-spring) forwards;
+  --animate-reveal-down: reveal-down 0.5s var(--ease-minor-spring) forwards;
+  --animate-content-blur: content-blur 0.3s ease-out forwards;
 }
 
 :root {
@@ -111,7 +147,6 @@
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.646 0.222 41.116);
 }
-
 
 @layer base {
   * {
